@@ -18,28 +18,11 @@ import org.saturn.app.service.impl.OutService;
 @CommandAliases(aliases = {"replicaoff", "offline", "botoff", "agentoff"})
 public class ReplicaOffCommandImpl extends UserCommandBaseImpl {
   private final OutService outService;
-  private final List<String> aliases = new ArrayList<>();
 
   public ReplicaOffCommandImpl(EngineImpl engine, ChatMessage message, List<String> aliases) {
     super(message, engine, getWhiteListedTrips(engine));
-    super.setAliases(this.getAliases());
+    super.setAliases(aliases);
     this.outService = super.engine.outService;
-    this.aliases.addAll(aliases);
-  }
-
-  @Override
-  public List<String> getAliases() {
-    return this.aliases;
-  }
-
-  @Override
-  public List<String> getArguments() {
-    return super.getArguments();
-  }
-
-  @Override
-  public Role getAuthorizedRole() {
-    return Role.ADMIN;
   }
 
   @Override
@@ -54,7 +37,7 @@ public class ReplicaOffCommandImpl extends UserCommandBaseImpl {
       return Optional.of(Status.FAILED);
     }
 
-    String channel = arguments.get(0).trim();
+    String channel = arguments.getFirst().trim();
     if (channel.isBlank() || channel.equals(engine.channel)) {
       outService.enqueueMessageForSending(
           author, "I'm the host bot serving current channel, not a replica.", isWhisper());
